# Picker

./: .gitignore  Picker.cabal  picker  picker.py
doc/: ideas.md  todo.md  views
src/: Main.hs  MaxN.hs  Query.hs  View.hs
src/Query/: Types.hs
src/View/: Types.hs
vim/plugin/: picker.vim
vim/python/: picker.py
